# CarParkSim

./: .gitattributes  CMakeLists.txt  README.md
app/Demo/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/CarParkSimLib/: ANPRCamera.cpp  ANPRCamera.h  ANPRReading.h  ANPRResult.h  AutoPayService.cpp  AutoPayService.h  AutoSessionService.cpp  AutoSessionService.h  Barrier.cpp  Barrier.h  BasicPaymentCalculator.cpp  BasicPaymentCalculator.h  Car.cpp  Car.h  CarPark.cpp  CarPark.h  CustomerAccount.h  CustomerAccountManager.cpp  CustomerAccountManager.h  Display.cpp  Display.h  EntryPoint.cpp  EntryPoint.h  ExitPoint.cpp  ExitPoint.h  ExitPolicy.cpp  ExitPolicy.h  IPaymentCalculator.h  Log.h  ParkingSession.h  ParkingSessionManager.cpp  ParkingSessionManager.h  PaymentCalculatorFactory.cpp  PaymentCalculatorFactory.h  PaymentDetails.h  PaymentMachine.cpp  PaymentMachine.h  PaymentService.cpp  PaymentService.h  RegistrationIndex.cpp  (+9 more)
tests/: AutoSessionService_test.cpp  CMakeLists.txt  Car_test.cpp  TicketManager_test.cpp
